# etrobocon2022

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile.inc  PartsOfGameMotion.cpp  PartsOfGameMotion.h  README.md  app.cfg  app.cpp  app.h  gtest_all.sh  make.sh  sim-test-all.sh  typescript
.github/: issue_template.md  pull_request_template.md
.github/workflows/: build-check.yaml  format-check.yaml  google-test.yaml  rear-camera-py.yaml  sim-test.yaml
common/: Logging.cpp  Logging.h
datafiles/: ArmRising.csv  CarryBonusLeft.csv  CarryBonusRight.csv  GameAreaLeft.csv  GameAreaRight.csv  Game_Left_02_0818.csv  Game_Right_02_0818.csv  Left_02_0815.csv  Left_02_0817.csv  LineTraceAreaLeft.csv  LineTraceAreaRight.csv  LineTraceAreaRight_shisoukai2.csv  LineTraceLeftParams.csv  LineTraceRightParams.csv  Linetrace_Left_02_02_0817.csv  Linetrace_Left_02_02_0819.csv  Linetrace_Left_02_0815.csv  Linetrace_Right_02_02_0903.csv  Linetrace_Right_02_02_0909.csv  Linetrace_Right_02_02_0911.csv  ToEndPointLeft.csv  ToEndPointRight.csv  ToEndPointRight_shisoukai2.csv  ToEndPoint_Right_02_02_0903.csv
datafiles/past_datafiles/: LineTraceAreaRight_shisoukai2.csv  LineTrace_Right_02_02_0930.csv  Linetrace_Left_01_0815.csv
docs/: odometry.md
module/: ArmKeeper.cpp  ArmKeeper.h  Calibrator.cpp  Calibrator.h  EtRobocon2022.cpp  EtRobocon2022.h  GameArea.cpp  GameArea.h  LineTraceArea.cpp  LineTraceArea.h  MotionParser.cpp  MotionParser.h  SystemInfo.h
module/API/: Controller.cpp  Controller.h  Measurer.cpp  Measurer.h
module/Calculator/: ColorJudge.cpp  ColorJudge.h  Mileage.cpp  Mileage.h  Pid.cpp  Pid.h
module/GameMotion/: BonusBlockCarrier.cpp  BonusBlockCarrier.h  GameMotion.cpp  GameMotion.h  GameMotionParser.cpp  GameMotionParser.h  PartsofGameMotion.cpp  PartsofGameMotion.h
module/Motion/: .ColorStraight.cpp.swp  ArmFalling.cpp  ArmFalling.h  ArmRising.cpp  ArmRising.h  BonusBlockCarrier.cpp  BonusBlockCarrier.h  ColorBlockCarrier.cpp  ColorBlockCarrier.h  ColorJudge.cpp  ColorJudge.h  ColorLineTracing.cpp  ColorLineTracing.h  ColorStraight.cpp  ColorStraight.h  CorrectingRotation.cpp  CorrectingRotation.h  DistanceLineTracing.cpp  DistanceLineTracing.h  DistanceStraight.cpp  DistanceStraight.h  DistanceTurning.cpp  DistanceTurning.h  EdgeChanger.cpp  EdgeChanger.h  EdgeChanging.cpp  EdgeChanging.h  LineTracer.cpp  LineTracer.h  LineTracerColor.cpp  LineTracerColor.h  LineTracerDistance.cpp  LineTracerDistance.h  Mileage.cpp  Mileage.h  Motion.cpp  Motion.h  NoneMotion.cpp  NoneMotion.h  Pid.cpp  (+13 more)
module/common/: Logger.cpp  (+6 more)
rear_camera_py/: .gitignore  Makefile  pyproject.toml  rear-camera.service  tox.ini
rear_camera_py/rear_camera/: __main__.py  angle_server.py  black_extractor.py  calibrator.py  camera_interface.py  line_angle_calculator.py
rear_camera_py/rear_camera/result_bank/0_0_0_180_80_80/: warning.txt
rear_camera_py/tests/: __init__.py  test_angle_server.py  test_black_extractor.py  test_calibrator.py  test_line_angle_calculator.py
rear_camera_py/tests/dummy/: __init__.py  camera_interface.py  picamera2.py
scripts/: organizeLogfile.sh  rear_camera.sh  serve.sh  start.sh  start_rear_camera.sh
sim-settings/: default.json
test/: .MotionTest.cpp.swp  ArmFallingTest.cpp  ArmRisingTest.cpp  BonusBlockCarrierTest.cpp  CalibratorTest.cpp  ColorBlockCarrierTest.cpp  ColorJudgeTest.cpp  ColorLineTracingTest.cpp  ColorStraightTest.cpp  CorrectingRotationTest.cpp  DistanceLineTracingTest.cpp  DistanceStraightTest.cpp  DistanceTurningTest.cpp  EdgeChangerTest.cpp  EtRobocon2022Test.cpp  GameAreaTest.cpp  GameMotionParserTest.cpp  GameMotionTest.cpp  LineTraceAreaTest.cpp  LineTracerColorTest.cpp  LineTracerDistanceTest.cpp  LineTracerTest.cpp  LoggerTest.cpp  LoggingTest.cpp  MeasurerTest.cpp  MileageTest.cpp  MotionParserTest.cpp  MotionTest.cpp  PidTest.cpp  RotationTest.cpp  StraightRunnerColorTest.cpp  StraightRunnerDistanceTest.cpp  StraightRunnerTest.cpp  StringOperatorTest.cpp  TurningDistanceTest.cpp
(+29 files in other folders)
